--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,13 @@ h6 {
   color: #149ddd;
 }
 
+#job-description {
+  font-size: 16px;
+  color: white;
+  font-style: italic;
+  padding-left: 11%;
+}
+
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
@@ -228,7 +235,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url('../img/profile-img-George.jpg') top center;
+  background: url('../img/ski2.jpg') top center;
   background-size: cover;
 }
 
@@ -251,7 +258,7 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  /* margin-left: 400px; */
+  padding-left: 100px;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
@@ -271,8 +278,9 @@ h6 {
 
 #hero p {
   color: #fff;
-  margin-bottom: 550px;
+  margin-bottom: 560px;
   /* margin-left: 400px; */
+  padding-left: 105px;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
 }
@@ -347,6 +355,84 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+@media only screen and (max-width: 1000px){
+#white-shirt-img{
+  display: flex;
+  justify-content: center;
+}
+}
+
+/* @media only screen and (min-width: 1000px){
+  #white-shirt-img{
+    display: flex;
+    justify-content: center;
+    width: 400px
+  }
+  } */
+
+
+/* @media only screen and (min-width: 600px){
+  #white-shirt-img{
+    width: 700px
+  }
+  } */
+
+
+/* @media only screen and (min-width: 252px) {
+#about-pic{
+  display: flex;
+  height: 400px;
+  /* width: 400px */
+ 
+/* } */ 
+
+@media only screen and (min-width: 1000px) {
+  #about-pic{
+    display: flex;
+    height: 400px;
+    
+    /* width: 400px */
+   
+  }
+
+  @media only screen and (max-width: 1000px) {
+    #about-pic{
+      display: flex;
+      height: 400px;
+      
+      /* width: 400px */
+     
+    }
+
+@media only screen and (min-width: 1000px) {
+  .about-layout {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+  }
+}
+
+/* @media only screen and (min-width: 1000px) {
+  #about-pic {
+    width: 400px
+  }
+} */
+
+@media only screen and (max-width: 1000px) {
+  .about-layout {
+    display: grid;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 50px;
+  }
+}
+
+/* #surf-image {
+  height: 100px;
+  width: 300px;
+} */
+
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
@@ -379,9 +465,9 @@ section {
   margin-bottom: 0;
 }
 
-#about-pic {
+/* #about-pic {
   height: 400px;
-}
+} */
 
 #col-lg-4 aos-innit aos-animate {
   margin-right: 300px;
@@ -439,11 +525,11 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 
 .progress {
-  display: flexbox;
+  display: flex;
   justify-content: center;
 }
 
@@ -465,6 +551,7 @@ section {
   font-weight: 600;
   font-family: 'Poppins', sans-serif;
   color: #050d18;
+  font-size: 14px;
 }
 
 .skills .progress .skill .val {
