--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,12 +355,6 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-@media only screen and (max-width: 1000px){
-#white-shirt-img{
-  display: flex;
-  justify-content: center;
-}
-}
 
 /* @media only screen and (min-width: 1000px){
   #white-shirt-img{
@@ -370,68 +364,40 @@ section {
   }
   } */
 
-
-/* @media only screen and (min-width: 600px){
-  #white-shirt-img{
-    width: 700px
-  }
-  } */
-
-
-/* @media only screen and (min-width: 252px) {
-#about-pic{
-  display: flex;
-  height: 400px;
-  /* width: 400px */
- 
-/* } */ 
-
-@media only screen and (min-width: 1000px) {
-  #about-pic{
-    display: flex;
-    height: 400px;
-    
-    /* width: 400px */
-   
-  }
-
-  @media only screen and (max-width: 1000px) {
-    #about-pic{
-      display: flex;
-      height: 400px;
-      
-      /* width: 400px */
-     
-    }
-
-@media only screen and (min-width: 1000px) {
-  .about-layout {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 50px;
-  }
-}
-
-/* @media only screen and (min-width: 1000px) {
-  #about-pic {
-    width: 400px
-  }
-} */
-
-@media only screen and (max-width: 1000px) {
-  .about-layout {
-    display: grid;
-    justify-content: center;
-    gap: 50px;
-    margin-top: 50px;
-  }
-}
-
 /* #surf-image {
   height: 100px;
   width: 300px;
 } */
+#about-pic {
+  height: 400px;
+  width: 190px;
+}
+
+#white-shirt-img {
+  flex-basis: 200px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 220px) {
+  .about-layout {
+    display: grid;
+    justify-items: center;
+    gap: 20px;
+  }
+}
+
+@media only screen and (max-width: 220px) {
+  .about-layout {
+    width: 200px;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .about-layout {
+    display: flex;
+  }
+}
 
 .about .content h3 {
   font-weight: 700;
