--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -630,7 +630,7 @@ section {
   border-radius: 50px;
   padding: 2px 15px;
 }
-/* 
+
 .portfolio #portfolio-flters li {
   cursor: pointer;
   display: inline-block;
@@ -642,7 +642,7 @@ section {
   color: #272829;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
-} */
+}
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
@@ -660,7 +660,7 @@ section {
   z-index: 1;
 }
 
-/* .portfolio .portfolio-wrap::before {
+.portfolio .portfolio-wrap::before {
   content: '';
   background: rgba(255, 255, 255, 0.5);
   position: absolute;
@@ -671,7 +671,7 @@ section {
   transition: all ease-in-out 0.3s;
   z-index: 2;
   opacity: 0;
-} */
+}
 
 .portfolio .portfolio-wrap .portfolio-links {
   opacity: 1;
